--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "tailwindcss": "^3.3.3"
+    "bulma": "^0.9.4",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.4.0"
   }
 }
